settings: fix overflow on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -99,6 +99,9 @@ button {
 .d-f {
 	display: flex;
 }
+.fxw-w {
+	flex-wrap: wrap;
+}
 .ov-h {
 	overflow: hidden;
 }
